[11.1] Fix Prix Transport - Ligne Devis
