# DeFilippis-swagger-2.0.yml
@@ -2636,6 +2636,11 @@ paths:
         type: integer
         required: false
       - in: query
+        name: defiLigneDevisMasseVolumique
+        description: Search filter for Masse Volumique
+        type: number
+        required: false
+      - in: query
         name: DF_Ligne_Devis_DF_Produit_Finis_id__defiPrdFinitionFacesVues
         description: Search filter for Finition Faces Vues
         type: string
@@ -2848,11 +2853,6 @@ paths:
         type: string
         required: false
       - in: query
-        name: defiLigneDevisMasseVolumique
-        description: Search filter for Masse Volumique
-        type: number
-        required: false
-      - in: query
         name: defiLigneDevisNomProduit
         description: Search filter for Nom Produit
         type: string
@@ -2876,6 +2876,11 @@ paths:
         name: defiLigneDevisFournisseur
         description: Search filter for Fournisseur
         type: string
+        required: false
+      - in: query
+        name: defiLigneDevisPrixTrsp
+        description: Search filter for Prix Transport
+        type: number
         required: false
       tags:
       - DF_Ligne_Devis
@@ -6739,18 +6744,21 @@ definitions:
       DF_Ligne_Devis_DF_Prix_Transport_id__defiPrTspId:
         description: Id Prix Transport Prix Transport
         type: string
+      defiLigneDevisMasseVolumique:
+        description: Masse Volumique
+        type: number
       defiLigneDevisUnite:
         description: Unité LigneD
         type: string
       defiLigneDevisEpaisseur:
         description: Epaisseur / Hauteur (cm)
         type: number
-      defiLigneDevisMasseVolumique:
-        description: Masse Volumique
-        type: number
       DF_Ligne_Devis_DF_Produit_Finis_id__defiPrdLargeur:
         description: Largeur (cm)
         type: string
+      defiLigneDevisPrixTrsp:
+        description: Prix Transport
+        type: number
       defiLigneDevisPrixTransportReference:
         description: Prix Transport Référence
         type: number
